--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,10 @@ jobs:
                   path: ~/.gradle/caches
                   key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
                   restore-keys: ${{ runner.os }}-gradle
-            - name: Build and analyze
+            - name: Build and test
+              run: ./gradlew build test
+            - name: Analyze
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
                   SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-              run: ./gradlew build sonarqube --info
-            - name: Run tests
-              run: ./gradlew test
+              run: ./gradlew sonarqube --info
