--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,10 +30,8 @@ jobs:
                   path: ~/.gradle/caches
                   key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
                   restore-keys: ${{ runner.os }}-gradle
-            - name: Build
-              run: ./gradlew build
-            - name: Test
-              run: ./gradlew test
+            - name: Build and test
+              run: ./gradlew build test
             - name: SonarQube scan
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
